added image to treatment and diagnosis sections.

--- a/psyc5009presentation.html
+++ b/psyc5009presentation.html
@@ -522,6 +522,7 @@
 <section id="treatment">
   <div class="blog-content-wrapper">
     <h1>Treatment & Management</h1>
+    <img src="https://media.istockphoto.com/id/1322211571/vector/group-therapy-addiction-treatment-concept-characters-counseling-with-psychologist-on.jpg?s=612x612&w=0&k=20&c=moDxi4u07wOzgiiuS2HK66dJzpsfRHkIk1ITTI5NbeE=" alt="Treatment" style="width: 100%; height: auto; margin: 20px 0;">  
     <p>While there's no cure for schizophrenia yet, effective treatments are available in helping patients manage symptoms, reduce relapses, and improve functioning. 
       Early identification and intervention may prevent or delay schizophrenia development and improve overall quality of life.</p>
     
