minor edits in treatment section: early intervention->info block

--- a/psyc5009presentation.html
+++ b/psyc5009presentation.html
@@ -176,7 +176,7 @@
       </div>
       <div class="timeline-event">
         <strong>Early-mid 1900s:</strong> <p>Lifetime confinement in asylums was common.</p>
-        <img src="https://media.npr.org/assets/img/2024/04/14/allison-building-sleeping-porch--1400x1128-b1d0729e4c749132347b4c87551adecc876b555c.jpg?s=1100&c=50&f=jpeg" alt="Asylum" style="max-width: 600px; height: auto; margin-top: 5px;">
+        <img src="https://media.npr.org/assets/img/2024/04/14/allison-building-sleeping-porch--1400x810.jpg?sfvrsn=e38692db_5" alt="Asylum" style="max-width: 600px; height: auto; margin-top: 5px;">
       </div>
       <div class="timeline-event">
         <strong>1950s:</strong> <p>Discovery of first antipsychotic medication (Chlorpromazine).</p>
@@ -626,12 +626,14 @@
     </table>
 
     <h2>Early Intervention</h2>
-    <p>Early detection and treatment significantly improve outcomes:</p>
-    <ul>
-      <li>Recognition of prodromal symptoms</li>
-      <li>Rapid access to specialized care</li>
-      <li>Coordinated specialty care programs</li>
-    </ul>
+    <div class="info-block">
+      <p>💡 <strong>Early detection and treatment significantly improve outcomes:</strong></p>
+      <ul>
+        <li>Recognition of prodromal symptoms</li>
+        <li>Rapid access to specialized care</li>
+        <li>Coordinated specialty care programs</li>
+      </ul>
+    </div>
 
     <h2>Hope, Challenges, Needs and Research Directions</h2>
     <div class="symptoms-tabs">
