improved treatment section

--- a/psyc5009presentation.html
+++ b/psyc5009presentation.html
@@ -625,9 +625,9 @@
         </tbody>
     </table>
 
-    <h2>Early Intervention</h2>
     <div class="info-block">
-      <p>💡 <strong>Early detection and treatment significantly improve outcomes:</strong></p>
+      <p>💡 <strong>Early Intervention</strong></p>
+      <p>Early detection and treatment significantly improve outcomes:</p>
       <ul>
         <li>Recognition of prodromal symptoms</li>
         <li>Rapid access to specialized care</li>
@@ -636,6 +636,7 @@
     </div>
 
     <h2>Hope, Challenges, Needs and Research Directions</h2>
+    <p>There is no one-size-fits-all solution — effective care requires a multi-disciplinary, personalized approach involving medication, therapy, community support, and patient involvement.</p>
     <div class="symptoms-tabs">
       <div class="tab">
         <button class="tab-button" onclick="toggleTab('hopes')">🌟 Hopes</button>
@@ -659,6 +660,7 @@
             <li><strong>Side Effects and Metabolic Issues:</strong> Many antipsychotics, especially second-generation ones, cause significant weight gain and metabolic syndrome, increasing the risk of diabetes and heart disease.</li>
             <li><strong>Negative and Cognitive Symptoms:</strong> Current treatments are less effective for negative symptoms (e.g., social withdrawal, lack of motivation) and cognitive deficits. These symptoms often impair real-world functioning even when psychosis is controlled.</li>
             <li><strong>Relapse Risk:</strong> Schizophrenia has a relapsing-remitting course. Each relapse can worsen long-term outcomes. Preventing them requires continuous care and early detection of warning signs.</li>
+            <li><strong>Stigma:</strong> Stigma remains a major barrier throughout treatment, leading to non-adherence, social withdrawal, or shame. It reduces engagement with care, making education, empathy, and peer support essential to counter hopelessness and promote recovery.</li>
           </ul>
           <p class="source">(Sources: bap.org.uk, psychiatryonline.org)</p>
         </div>
